[package]
name = "stafi"
version = "0.1.0"
authors = ["Stafi Protocol"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "stafi"
path = "node/src/main.rs"

[dependencies]
error-chain = "0.12"
stafi-cli = { path = "node/cli" }
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }

[build-dependencies]
vergen = "3"

[workspace]
members = [
	"node/runtime",
	"node/cli",
	"node/executor",
	"node/primitives",
	"node/service",
	"node/modules/stafi-multisig",
	"node/modules/stafi-crypto",
]

[badges]
travis-ci = { repository = "stafiprotocol/stafi-node", branch = "master" }

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
