[workspace]
members = [
	"node/runtime",
	"node/cli",
	"node/rpc-client",
	"node/rpc",
	"node/executor",
	"node/primitives",
	"node/modules/stafi-crypto",
	# "node/modules/bridge-tezos",
	"node/modules/stafi-externalrpc",
	"node/modules/stafi-fund",
	"node/modules/stafi-multisig",
	"node/modules/stafi-staking",
	"node/modules/stafi-staking-storage",
	"node/modules/tokenbalances",
]

# [badges]
# travis-ci = { repository = "stafiprotocol/stafi-node", branch = "master" }

[profile.release]
# Stafi runtime requires unwinding.
panic = "unwind"
