[package]
name = "node-cli"
version = "0.3.1"
authors = ["Stafi Technologies <technical@stafi.io>"]
description = "Generic Stafi node implementation in Rust."
build = "build.rs"
edition = "2018"
default-run = "stafi"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[badges]
travis-ci = { repository = "stafiprotocol/stafi-node" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "stafiprotocol/stafi-node" }
is-it-maintained-open-issues = { repository = "stafiprotocol/stafi-node" }

[[bin]]
name = "stafi"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.4" }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
futures = { version = "0.3.1", features = ["compat"] }
hex-literal = "0.3.1"
hex = "0.4.0"
jsonrpc-core = "14.2.0"
jsonrpc-pubsub = "14.2.0"
log = "0.4.8"
rand = "0.7.2"
structopt = { version = "0.3.8", optional = true }
tracing = "0.1.18"
parking_lot = "0.10.0"

# primitives
sp-authority-discovery = { rev = "b383cd5d",  git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-consensus-babe = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
grandpa-primitives = { rev = "b383cd5d", package = "sp-finality-grandpa", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-core = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-runtime = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-timestamp = { rev = "b383cd5d", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-finality-tracker = { rev = "b383cd5d", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-inherents = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-keyring = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-io = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-consensus = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-transaction-pool = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

# client dependencies
sc-client-api = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-chain-spec = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-consensus = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-transaction-pool = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-network = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-consensus-babe = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
grandpa = { rev = "b383cd5d", package = "sc-finality-grandpa", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-client-db = { rev = "b383cd5d", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-offchain = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-rpc = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-basic-authorship = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-service = { rev = "b383cd5d", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-tracing = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-telemetry = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-authority-discovery = { rev = "b383cd5d",  git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

# frame dependencies
pallet-indices = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-timestamp = { rev = "b383cd5d", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
frame-system = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-balances = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-transaction-payment = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
frame-support = { rev = "b383cd5d", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-im-online = { rev = "b383cd5d", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-authority-discovery = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-staking = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-grandpa = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

# node-specific dependencies
node-runtime = { version = "0.3.1", path = "../runtime" }
node-rpc = { version = "0.3.1", path = "../rpc" }
node-primitives = { version = "0.3.1", path = "../primitives" }
node-executor = { version = "0.3.1", path = "../executor" }

# CLI-specific dependencies
sc-cli = { rev = "b383cd5d", optional = true, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
frame-benchmarking-cli = { rev = "b383cd5d", optional = true, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
node-inspect = { version = "0.3.1", optional = true, path = "../inspect" }


[target.'cfg(target_arch="x86_64")'.dependencies]
node-executor = { version = "0.3.1", path = "../executor", features = [ "wasmtime" ] }
sc-cli = { rev = "b383cd5d", optional = true, git = 'https://github.com/stafiprotocol/stafi-blockchain.git', features = [ "wasmtime" ] }
sc-service = { rev = "b383cd5d", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git', features = [ "wasmtime" ] }
sp-trie = { rev = "b383cd5d", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git', features = ["memory-tracker"] }

[dev-dependencies]
sc-keystore = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-consensus = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-consensus-babe = { rev = "b383cd5d", features = ["test-helpers"], git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-consensus-epochs = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-service-test = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
futures = "0.3.4"
tempfile = "3.1.0"
assert_cmd = "1.0"
nix = "0.17"
serde_json = "1.0"
regex = "1"
platforms = "0.2.1"

[build-dependencies]
structopt = { version = "0.3.8", optional = true }
node-inspect = { version = "0.3.1", optional = true, path = "../inspect" }
frame-benchmarking-cli = { rev = "b383cd5d", optional = true, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
substrate-build-script-utils = { rev = "b383cd5d", optional = true, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
substrate-frame-cli = { rev = "b383cd5d", optional = true, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

[build-dependencies.sc-cli]
rev = "b383cd5d"
package = "sc-cli"
git = 'https://github.com/stafiprotocol/stafi-blockchain.git'
optional = true

[features]
default = [ "cli" ]
cli = [
	"node-executor/wasmi-errno",
	"node-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/db",
	"structopt",
	"substrate-build-script-utils",
]
runtime-benchmarks = [
	"node-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
