[package]
name = "node-cli"
version = "0.5.2"
authors = ["Stafi Technologies <technical@stafi.io>"]
description = "Generic Stafi node implementation in Rust."
build = "build.rs"
edition = "2018"
default-run = "stafi"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[badges]
travis-ci = { repository = "stafiprotocol/stafi-node" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "stafiprotocol/stafi-node" }
is-it-maintained-open-issues = { repository = "stafiprotocol/stafi-node" }

[[bin]]
name = "stafi"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.4" }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
futures = { version = "0.3.1", features = ["compat"] }
hex-literal = "0.3.1"
hex = "0.4.0"
log = "0.4.8"
rand = "0.7.2"
structopt = { version = "0.3.8", optional = true }
tracing = "0.1.19"
parking_lot = "0.10.0"

# primitives
sp-authority-discovery = { branch = "master",  git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-consensus-babe = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
grandpa-primitives = { branch = "master", package = "sp-finality-grandpa", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-core = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-runtime = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-timestamp = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-finality-tracker = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-inherents = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-keyring = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-io = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-consensus = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-transaction-pool = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

# client dependencies
sc-client-api = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-chain-spec = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-consensus = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-transaction-pool = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-network = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-consensus-babe = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
grandpa = { branch = "master", package = "sc-finality-grandpa", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-client-db = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-offchain = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-rpc = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-basic-authorship = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-service = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-tracing = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-telemetry = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-authority-discovery = { branch = "master",  git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

# frame dependencies
pallet-indices = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-timestamp = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
frame-system = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-balances = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-transaction-payment = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
frame-support = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-im-online = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-authority-discovery = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-staking = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-grandpa = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

# node-specific dependencies
node-runtime = { version = "0.5.2", path = "../runtime" }
node-rpc = { version = "0.5.2", path = "../rpc" }
node-primitives = { version = "0.5.2", path = "../primitives" }
node-executor = { version = "0.5.2", path = "../executor" }

# CLI-specific dependencies
sc-cli = { branch = "master", optional = true, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
frame-benchmarking-cli = { branch = "master", optional = true, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
node-inspect = { version = "0.5.2", optional = true, path = "../inspect" }


[target.'cfg(target_arch="x86_64")'.dependencies]
node-executor = { version = "0.5.2", path = "../executor", features = [ "wasmtime" ] }
sc-cli = { branch = "master", optional = true, git = 'https://github.com/stafiprotocol/stafi-blockchain.git', features = [ "wasmtime" ] }
sc-service = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git', features = [ "wasmtime" ] }
sp-trie = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git', features = ["memory-tracker"] }

[dev-dependencies]
sc-keystore = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-consensus = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-consensus-babe = { branch = "master", features = ["test-helpers"], git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-consensus-epochs = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-service-test = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
futures = "0.3.4"
tempfile = "3.1.0"
assert_cmd = "1.0"
nix = "0.17"
serde_json = "1.0"
regex = "1"
platforms = "1.1"

[build-dependencies]
structopt = { version = "0.3.8", optional = true }
node-inspect = { version = "0.5.2", optional = true, path = "../inspect" }
frame-benchmarking-cli = { branch = "master", optional = true, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
substrate-build-script-utils = { branch = "master", optional = true, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
substrate-frame-cli = { branch = "master", optional = true, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

[build-dependencies.sc-cli]
branch = "master"
package = "sc-cli"
git = 'https://github.com/stafiprotocol/stafi-blockchain.git'
optional = true

[features]
default = [ "cli" ]
cli = [
	"node-executor/wasmi-errno",
	"node-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/db",
	"structopt",
	"substrate-build-script-utils",
]
runtime-benchmarks = [
	"node-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
