[package]
name = "node-executor"
version = "0.3.1"
authors = ["Stafi Technologies <technical@stafi.io>"]
description = "Stafi node implementation in Rust."
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4" }
node-primitives = { version = "0.3.1", path = "../primitives" }
node-runtime = { version = "0.3.1", path = "../runtime" }
sc-executor = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-core = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-io = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-state-machine = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-trie = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
trie-root = "0.16.0"
frame-benchmarking = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

[dev-dependencies]
criterion = "0.3.0"
frame-support = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
frame-system = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
node-testing = { version = "0.3.1", path = "../testing" }
pallet-balances = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-grandpa = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-im-online = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-indices = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-session = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-timestamp = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-transaction-payment = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-treasury = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-application-crypto = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-runtime = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-externalities = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
substrate-test-client = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
wabt = "0.9.2"

[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false
