[package]
name = "node-executor"
version = "0.4.8"
authors = ["Stafi Technologies <technical@stafi.io>"]
description = "Stafi node implementation in Rust."
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4" }
node-primitives = { version = "0.4.8", path = "../primitives" }
node-runtime = { version = "0.4.8", path = "../runtime" }
sc-executor = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-core = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-io = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-state-machine = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-trie = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
trie-root = "0.16.0"
frame-benchmarking = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

[dev-dependencies]
criterion = "0.3.0"
frame-support = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
frame-system = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
node-testing = { version = "0.4.8", path = "../testing" }
pallet-balances = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-grandpa = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-im-online = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-indices = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-session = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-timestamp = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-transaction-payment = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-treasury = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-application-crypto = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-runtime = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-externalities = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
substrate-test-client = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false
