[package]
name = "node-executor"
version = "0.4.9"
authors = ["Stafi Technologies <technical@stafi.io>"]
description = "Stafi node implementation in Rust."
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4" }
node-primitives = { version = "0.4.9", path = "../primitives" }
node-runtime = { version = "0.4.9", path = "../runtime" }
sc-executor = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-core = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-io = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-state-machine = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-trie = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
trie-root = "0.16.0"
frame-benchmarking = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

[dev-dependencies]
criterion = "0.3.0"
frame-support = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
frame-system = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
node-testing = { version = "0.4.9", path = "../testing" }
pallet-balances = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-grandpa = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-im-online = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-indices = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-session = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-timestamp = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-transaction-payment = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-treasury = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-application-crypto = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-runtime = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-externalities = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
substrate-test-client = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false
