[package]
name = "node-inspect"
version = "0.3.1"
authors = ["Stafi Technologies <technical@stafi.io>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4" }
derive_more = "0.99"
log = "0.4.8"
sc-cli = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-client-api = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-service = { rev = "b383cd5d", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-blockchain = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-core = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-runtime = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
structopt = "0.3.8"
